<resources>
    <string name="app_name">Ask</string>
    <string name="not_account">Dont have an account? <b>Sign Up</b></string>
    <string name="sign">Sign In</string>
    <string name="user">Username</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="training">Training</string>
    <string name="welcome">Welcome</string>
    <string name="enjoy">Enjoy</string>
    <string name="createMatch">Create a Match</string>
    <string name="Statistics">Statistics</string>
    <string name="newTraining">New Training</string>
    <string name="selectTopic">Select topic</string>
    <string name="numberQuestions"># Questions</string>
    <string name="time">Time</string>
    <string name="createTraining">Create</string>
</resources>