<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTrainingActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="315dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/newTraining"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="176dp"
        android:layout_height="69dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#3FC1C9"
        android:text="@string/selectTopic"
        android:textColor="#FFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="131dp"
        android:layout_height="33dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/numberQuestions"
        android:textSize="22sp"
        android:textStyle=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="116dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:text="Time"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.157" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="59dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="#3FC1C9"
        android:text="@string/createTraining"
        android:textSize="20sp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="69dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="#FC5185" />

</androidx.constraintlayout.widget.ConstraintLayout>